Add dev-specific elements to web.config

--- a/_guam/Web.config
+++ b/_guam/Web.config
@@ -204,3 +204,25 @@
 <!--removed-->
 <!--removed-->
 <!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
