//tracker.nci.nih.gov/browse/OCEPROJECT-4401 - Added clientutils class - Update login.aspx.cs to use ClientUtils methods

--- a/NCIPLCC/nciplcc.csproj
+++ b/NCIPLCC/nciplcc.csproj
@@ -149,6 +149,7 @@
     <Compile Include="changepwd.aspx.designer.cs">
       <DependentUpon>changepwd.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ClientUtils.cs" />
     <Compile Include="DAL\SQLDataAccess2.cs" />
     <Compile Include="default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
