--- a/NCIPLLM/NCIPLLM.csproj
+++ b/NCIPLLM/NCIPLLM.csproj
@@ -23,6 +23,10 @@
     </UpgradeBackupLocation>
     <OldToolsVersion>4.0</OldToolsVersion>
     <UseIISExpress>false</UseIISExpress>
+    <IISExpressSSLPort />
+    <IISExpressAnonymousAuthentication />
+    <IISExpressWindowsAuthentication />
+    <IISExpressUseClassicPipelineMode />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -142,6 +146,7 @@
     <Compile Include="changepwd.aspx.designer.cs">
       <DependentUpon>changepwd.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ClientUtils.cs" />
     <Compile Include="outofstock.aspx.cs">
       <DependentUpon>outofstock.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
