--- a/PERT/pert.csproj
+++ b/PERT/pert.csproj
@@ -53,6 +53,10 @@
     <Reference Include="AjaxControlToolkit, Version=3.0.20820.16598, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
       <HintPath>..\ReferenceDlls\AjaxControlToolkit.dll</HintPath>
     </Reference>
+    <Reference Include="Aspensys.GlobalUsers.WebServiceClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=ed07a26186c63457, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ReferenceDlls\Aspensys.GlobalUsers.WebServiceClient.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.EnterpriseLibrary.Common, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\ReferenceDlls\Microsoft.Practices.EnterpriseLibrary.Common.dll</HintPath>
@@ -207,7 +211,6 @@
     </Compile>
     <Compile Include="usercontrols\GuamControl.ascx.cs">
       <DependentUpon>GuamControl.ascx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="usercontrols\GuamControl.ascx.designer.cs">
       <DependentUpon>GuamControl.ascx</DependentUpon>
