--- a/PERT/pert.csproj
+++ b/PERT/pert.csproj
@@ -140,6 +140,7 @@
     <Compile Include="changepwd.aspx.designer.cs">
       <DependentUpon>changepwd.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ClientUtils.cs" />
     <Compile Include="default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
