--- a/NCIPLADMIN/NCIPLADMIN.csproj
+++ b/NCIPLADMIN/NCIPLADMIN.csproj
@@ -50,9 +50,11 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\ReferenceDlls\AjaxControlToolkit.dll</HintPath>
     </Reference>
+	<!-- this is not being used right now, but it throwing an error on the front end
     <Reference Include="ClosedXML">
       <HintPath>DllReferences\ClosedXML.dll</HintPath>
     </Reference>
+	-->
     <Reference Include="DocumentFormat.OpenXml">
       <HintPath>DllReferences\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
