//tracker.nci.nih.gov/browse/OCEPROJECT-4470 - Admin/CC/LM/PLex transforms

--- a/NCIPLADMIN/EntLibConfig.QA.config
+++ b/NCIPLADMIN/EntLibConfig.QA.config
@@ -3,3 +3,9 @@
 <!--removed-->
 <!--removed-->
 <!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
