--- a/_rootExternal/web.config
+++ b/_rootExternal/web.config
@@ -45,3 +45,13 @@
 <!--removed-->
 <!--removed-->
 <!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
