GUAM error hotfix - Rolled NCIPLAdmin back to .NET v2.0

--- a/NCIPLADMIN/Web.config
+++ b/NCIPLADMIN/Web.config
@@ -116,3 +116,65 @@
 <!--removed-->
 <!--removed-->
 <!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
+<!--removed-->
